--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         </header>
         <nav>
 			 <ul id="menu">
-               <li><a href="../html/1er_html.html">Formatos</a></li>
-                <li><a href="../html/lista_html.html">Listas</a></li>
-                <li><a href="../html/tablas.html">tablas</a></li>
-                <li><a href="../html/imagenes.html">Imagenes</a></li>
-               <li><a href="../html/imagenes.html">Audio</a></li>
-                <li><a href="../html/video.html">video</a></li>
-                <li><a href="../html/formatos.html">Formularios</a></li>         
+               <li><a href="html/1er_html.html">Formatos</a></li>
+                <li><a href="html/lista_html.html">Listas</a></li>
+                <li><a href="html/tablas.html">tablas</a></li>
+                <li><a href="html/imagenes.html">Imagenes</a></li>
+               <li><a href="html/imagenes.html">Audio</a></li>
+                <li><a href="html/video.html">video</a></li>
+                <li><a href="html/formatos.html">Formularios</a></li>         
   </ul>
 	</nav>
         <main>
