--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="html/lista_html.html">Listas</a></li>
                 <li><a href="html/tablas.html">tablas</a></li>
                 <li><a href="html/imagenes.html">Imagenes</a></li>
-               <li><a href="html/imagenes.html">Audio</a></li>
+               <li><a href="html/audio.html">Audio</a></li>
                 <li><a href="html/video.html">video</a></li>
                 <li><a href="html/formatos.html">Formularios</a></li>         
   </ul>
