--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         </header>
         <nav>
 			 <ul id="menu">
-               <li><a href="html/1er_html.html">Formatos</a></li>
-                <li><a href="html/lista_html.html">Listas</a></li>
+               <li><a href="html/1er_html.html">Inicio</a></li>
+                <li><a href="html/listas_html.html">Listas</a></li>
                 <li><a href="html/tablas.html">tablas</a></li>
                 <li><a href="html/imagenes.html">Imagenes</a></li>
                <li><a href="html/audio.html">Audio</a></li>
