--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="html/imagenes.html">Imagenes</a></li>
                <li><a href="html/audio.html">Audio</a></li>
                 <li><a href="html/video.html">video</a></li>
-                <li><a href="html/formatos.html">Formularios</a></li>         
+                <li><a href="html/formularios.html">Formularios</a></li>         
   </ul>
 	</nav>
         <main>
